[package]
name = "mnemo-pgwire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PostgreSQL wire protocol server for Mnemo — accept SQL queries over pgwire"

[dependencies]
mnemo-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
